--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,11 @@
     <p>Empresa: <%= empresa %></p>
     <p>Inscritos no canal: <%= inscritos %> </p>
 
+    <% if(msg){%> 
+        <h3>Isso é uma msg de erro!</h3>
+    <%} else {%> 
+        <h3>Nenhum erro!</h3>
+    <%}%> 
 
 </body>
 </html>
