--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -10,9 +10,16 @@
 
 </head>
 <body>
+
+    <nav class="navbar navbar-light bg-primary">
+        <a class="navbar-brand" href="/">
+            <img src="/img/guia.png"> 
+        </a>
+    </nav>
+
     <div class="container">
 
-        <div class="card">
+        <div class="card" id="formulario-pergunta">
             <div class="card-header">
                 <h3>Realizar pergunta</h3>
             </div>
@@ -24,7 +31,7 @@
                     <label>Descrição</label>
                     <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
                     <br>
-                    <button class="btn btn-success"  class="">Perguntar</button>
+                    <button class="btn btn-primary"  class="">Perguntar</button>
                 </form>
 
             </div>
