--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -1,1 +1,13 @@
-<h1>Teste </h1>
+<%- include('./partials/header.ejs')  %> 
+<body>
+    <%- include('./partials/navbar.ejs')  %> 
+    
+    <div class="container">
+        <hr>
+        <h1><%= pergunta.title %> </h1>
+        <p><%= pergunta.description %> </p>
+        <hr>
+    </div>
+
+</body>
+<%- include('./partials/footer.ejs')  %> 
