--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
                     <h3><%= question.title %></h3>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-primary">Responder</button>
+                    <a href="/pergunta/<%= question.id %>"</a><button class="btn btn-primary">Responder</button></a>
                 </div>
             </div>
         
