--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -7,6 +7,12 @@
         <h1><%= pergunta.title %> </h1>
         <p><%= pergunta.description %> </p>
         <hr>
+        <form>
+            <h3>Responda</h3>
+            <label>Resposta</label>
+            <textarea placeholder="Digite sua resposta" class="form-control" name="body"></textarea><br>
+            <button type="submit" class="btn bnt-primary">Responder</button>
+        </form>
     </div>
 
 </body>
