--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -7,10 +7,10 @@
         <h1><%= pergunta.title %> </h1>
         <p><%= pergunta.description %> </p>
         <hr>
-        <form>
+        <form method="post" action="/responder">
             <h3>Responda</h3>
             <label>Resposta:</label>
-            <textarea placeholder="Digite sua resposta" class="form-control" name="body"></textarea><br>
+            <textarea placeholder="Digite sua resposta" class="form-control" name="corpo"></textarea><br>
             <input type="hidden" name="pergunta" value="<%= pergunta.id %>" >
             <button type="submit" class="btn btn-primary">Responder</button>
         </form>
