--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -7,13 +7,25 @@
         <h1><%= pergunta.title %> </h1>
         <p><%= pergunta.description %> </p>
         <hr>
-        <form method="post" action="/responder">
+        <form method="POST" action="/responder">
             <h3>Responda</h3>
             <label>Resposta:</label>
             <textarea placeholder="Digite sua resposta" class="form-control" name="corpo"></textarea><br>
             <input type="hidden" name="pergunta" value="<%= pergunta.id %>" >
             <button type="submit" class="btn btn-primary">Responder</button>
         </form>
+        <hr>
+        <h3>Respostas</h3>
+        <hr>
+        <% respostas.forEach(resposta => {%>
+            <br>
+            <div class="card">
+                <div class="card-body">
+                    <p><%= resposta.body %></p>
+                </div>
+            </div>
+        <% }) %>
+
     </div>
 
 </body>
